2018-01-22 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.044)
* Reapply https://github.com/perl5-dbi/DBD-mysql/pull/114 
  "Improve SSL settings, reflect changes for BACKRONYM and 
  Riddle vulnerabilities, enforce SSL encryption when mysql_ssl=1 is set"
  Thank you to Pali Rohar, Daniël van Eeden, Booking.com, et al:w
* Fix parsing configure libs from mysql_config --libs output in Makefile.PL
  Libraries in mysql_config --libs output can be specified by library name
  with the -l prefix or by absolute path to library name without any prefix.
  Parameters must start with a hyphen, so treat all options without leading
  hyphen in mysql_config --libs output as libraries with full path.
  Partially fixes bug https://rt.cpan.org/Public/Bug/Display.html?id=100898
  Fix by Pali Rohár.
* Return INTs with ZEROFILL as strings. Reported by Knarf, fix by Pali Rohár.
   https://rt.cpan.org/Public/Bug/Display.html?id=118977
* Correct require on relative path for perl 5.26. Fix by Grinnz.
   https://github.com/perl5-dbi/DBD-mysql/pull/136

2017-06-29 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.043)

YOUR ATTENTION PLEASE, THIS IS A REVERT TO 4.041
This version is the same as 4.041 with all its bugs and
limitations. In version 4.042 there were some changes to Unicode handling
that turned out to be causing issues with existing implementations.
While it is possible to argue that the old behaviour was wrong and buggy,
lots of applications and scripts were depending on this behaviour so it
is NOT a good idea to change this.

There were lots of commits since 4.041, we'll add those back bit by bit
in a future release, excluding the ones which cause problems.


2017-??-?? Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.042_01)
* Use Devel::CheckLib 1.09 or newer, fixes
   https://github.com/perl5-dbi/DBD-mysql/issues/109
* Improve CI testing on AppVeyor: caching, path to cpan, configure deps (pali)
* Specify bigint as test dependency.
