@@ -398,6 +398,7 @@ if (eval $ExtUtils::MakeMaker::VERSION >= 5.43) {
         'Alexandr Ciornii <alexchorny@gmail.com>',
         'Alexey Molchanov <alexey.molchanov@portaone.com>',
         'Amiri Barksdale at Home <amiri@roosterpirates.com>',
+        'Andrew Miller <ikari7789@yahoo.com>',
         'Aran Deltac <bluefeet@gmail.com>',
         'Bernt M. Johnsen <bernt.johnsen@oracle.com>',
         'Chase Whitener <chase.whitener@infotechfl.com>',
@@ -408,12 +409,14 @@ if (eval $ExtUtils::MakeMaker::VERSION >= 5.43) {
         'Dagfinn Ilmari Mannsåker <ilmari@ilmari.org>',
         'Daisuke Murase <typester@cpan.org>',
         'Damyan Ivanov <dmn@debian.org>',
+        'Dan Book <grinnz@gmail.com>',
         'Daniël van Eeden <daniel.vaneeden@booking.com>',
+        'Dave Lambley <davel@isosceles.(none)>',
         'David Farrell <davidnmfarrell@gmail.com>',
         'David Steinbrunner <dsteinbrunner@pobox.com>',
         'Giovanni Bechis <giovanni@bigio.snb.it>',
         'Graham Ollis <plicease@cpan.org>',
-        'H.Merijn Brand <h.m.brand@xs4all.nl>',
+        'H.Merijn Brand - Tux <h.m.brand@xs4all.nl>',
         'Hanno <hanno@gentoo.org>',
         'James McCoy <jamessan@jamessan.com>',
         'Jim Winstead <jimw@trainedmonkey.com>',
@@ -424,6 +427,7 @@ if (eval $ExtUtils::MakeMaker::VERSION >= 5.43) {
         'Matthew Horsfall (alh) <WolfSage@gmail.com>',
         'Michiel Beijen <michiel.beijen@gmail.com>',
         'Mike Pomraning <mjp@pilcrow.madison.wi.us>',
+        'Mohammad S Anwar <mohammad.anwar@yahoo.com>',
         'Pali <pali@cpan.org>',
         'Patrick Galbraith <patg@patg.net>',
         'Perlover <perlover@perlover.com>',
@@ -441,6 +445,7 @@ if (eval $ExtUtils::MakeMaker::VERSION >= 5.43) {
         'Taro Kobayashi <9re.3000@gmail.com>',
         'Tatsuhiko Miyagawa <miyagawa@bulknews.net>',
         'Tim Mullin <tim@cpanel.net>',
+        'Ville Skyttä <ville.skytta@iki.fi>',
         'Vladimir Marek <vlmarek@volny.cz>',
         'katyavoid <katyavoid@gmail.com>',
         'kmx <kmx@cpan.org>',
